--- a/css/agency.css
+++ b/css/agency.css
@@ -134,7 +134,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #f6bf01;
+    border-color: #0f738c ;
     color: #fff;
     background-color: #0f738c;
 }
