change name colour

--- a/css/agency.css
+++ b/css/agency.css
@@ -528,7 +528,7 @@ section h3.section-subheading {
 
 .timeline .timeline-heading h4 {
     margin-top: 0;
-    color: inherit;
+    color: #16ACD1;
 }
 
 .timeline .timeline-heading h4.subheading {
